--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,7 @@
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_marginTop="30dp"
+            android:id="@+id/budgetCardView"
             >
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -141,6 +142,7 @@
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_marginTop="30dp"
+            android:id="@+id/expensesCardView"
             >
             <RelativeLayout
                 android:layout_width="match_parent"
