--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -31,31 +31,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="home"
-            android:layout_marginTop="60dp"/>
+            android:layout_marginTop="60dp"
+            android:id="@+id/homeButton"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Accounts"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:id="@+id/accountButtonMenu"/>
 
         <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Budget"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:id="@+id/budgetButtoMenu"/>
 
         <Button
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="Receipts"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:id="@+id/receiptsButtonmenu"/>
 
         <Button
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:text="Expenses"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:id="@+id/expensesButtonMenu"/>
     </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
