--- a/app/src/main/res/layout/layout_account.xml
+++ b/app/src/main/res/layout/layout_account.xml
@@ -141,6 +141,7 @@
                 android:layout_width="200dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
+                android:id="@+id/accountsCardViewA"
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
