--- a/app/src/main/res/layout/layout_budget.xml
+++ b/app/src/main/res/layout/layout_budget.xml
@@ -144,6 +144,7 @@
                 android:layout_width="200dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
+                android:id="@+id/editBudgetCardViewB"
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
