--- a/app/src/main/res/layout/layout_edit_receipt.xml
+++ b/app/src/main/res/layout/layout_edit_receipt.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:src="@mipmap/ic_launcher"
-                android:onClick="openCamera"/>
+                android:id="@+id/receiptImage"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
