--- a/app/src/main/res/layout/layout_receipts.xml
+++ b/app/src/main/res/layout/layout_receipts.xml
@@ -141,7 +141,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="80dp"
-                    android:text="Camera"/>
+                    android:text="Camera"
+                    android:id="@+id/cameraButton"/>
 
             </LinearLayout>
 
@@ -186,6 +187,7 @@
                 android:layout_width="200dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
+                android:id="@+id/receiptsCardViewR"
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
