--- a/app/src/main/res/layout/layout_edit_expenses.xml
+++ b/app/src/main/res/layout/layout_edit_expenses.xml
@@ -8,15 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/menuButton"
-            android:layout_width="65dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/BackButtom"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +27,7 @@
             android:id="@+id/nameExpenseLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="100dp"
             android:text="Apartment Rent"
             android:textSize="25dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +67,8 @@
 
                 <EditText
                     android:layout_width="200dp"
-                    android:layout_height="25dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:layout_marginStart="62dp"
                     android:layout_marginTop="15dp"
                     android:hint="2/18/2019"
@@ -96,7 +89,8 @@
                     android:textSize="15dp" />
                 <EditText
                     android:layout_width="200dp"
-                    android:layout_height="25dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a Amount"/>
