--- a/app/src/main/res/layout/layoute_edit_accounts.xml
+++ b/app/src/main/res/layout/layoute_edit_accounts.xml
@@ -8,21 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/menuButton"
-            android:layout_width="65dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/BackButtom"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/editAcountLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="60dp"
             android:text="Edit Account"
             android:textSize="25dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +44,8 @@
 
                 <EditText
                     android:layout_width="200dp"
-                    android:layout_height="25dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a name" />
@@ -94,7 +86,8 @@
 
                 <EditText
                     android:layout_width="200dp"
-                    android:layout_height="25dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a Amount"/>
