--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,28 +87,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:background="#f2f2f2">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="200dp"
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginTop="30dp"
-            android:id="@+id/budgetCardView"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No Budgets Created Yet"
-                    android:textSize="15dp"
-                    android:layout_marginTop="60dp"/>
-            </RelativeLayout>
+            android:id="@+id/budgetRecyclerView"
+            android:orientation="horizontal">
 
-        </android.support.v7.widget.CardView>
+
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
