--- a/app/src/main/res/layout/layoute_edit_accounts.xml
+++ b/app/src/main/res/layout/layoute_edit_accounts.xml
@@ -61,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="Account Name:"
+                    android:text="Account Type:"
                     android:textSize="15dp" />
                 <Spinner
                     android:layout_width="150dp"
