--- a/app/src/main/res/layout/layout_account.xml
+++ b/app/src/main/res/layout/layout_account.xml
@@ -119,7 +119,7 @@
             app:layout_constraintTop_toBottomOf="@+id/addButtonAccount"/>
 
         <!--Lists Of Accounts-->
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:id="@+id/accountList"
@@ -128,31 +128,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:orientation="horizontal"
             android:gravity="center_horizontal">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="200dp"
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
-                android:id="@+id/accountsCardViewA"
-                >
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_horizontal"
-                    >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="No Acounts Created Yet"
-                        android:textSize="15dp"
-                        android:layout_marginTop="60dp"/>
-                </RelativeLayout>
+                android:id="@+id/accountRecyclerView"
+                android:orientation="horizontal">
 
-            </android.support.v7.widget.CardView>
 
-        </LinearLayout>
+            </android.support.v7.widget.RecyclerView>
+
+        </RelativeLayout>
 
     </android.support.constraint.ConstraintLayout>
 
