--- a/app/src/main/res/layout/account_cardview_fragment.xml
+++ b/app/src/main/res/layout/account_cardview_fragment.xml
@@ -8,7 +8,7 @@
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_marginTop="30dp"
-        android:id="@+id/budgetCardView"
+        android:id="@+id/accountCardView"
         android:layout_centerInParent="true">
 
         <RelativeLayout
@@ -22,10 +22,10 @@
                 android:layout_margin="10dp"
                 app:cardMaxElevation="2dp"
                 app:cardElevation="1dp"
-                android:id="@+id/titleBudgetCard">
+                android:id="@+id/titleAccountCard">
 
                 <TextView
-                    android:id="@+id/budgetCardTitle"
+                    android:id="@+id/accountCardTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="" />
@@ -34,7 +34,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/titleBudgetCard"
+                android:layout_below="@+id/titleAccountCard"
                 android:orientation="vertical"
                 android:layout_marginTop="20dp">
 
@@ -52,7 +52,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="50dp"
-                        android:id="@+id/moneySavedLabelFragment"
+                        android:id="@+id/balanceLabelFragment"
                         android:text=""/>
                 </LinearLayout>
 
