--- a/app/src/main/res/layout/expenses_cardview_fragment.xml
+++ b/app/src/main/res/layout/expenses_cardview_fragment.xml
@@ -8,7 +8,7 @@
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_marginTop="30dp"
-        android:id="@+id/budgetCardView"
+        android:id="@+id/expensesCardView"
         android:layout_centerInParent="true">
 
         <RelativeLayout
@@ -22,10 +22,10 @@
                 android:layout_margin="10dp"
                 app:cardMaxElevation="2dp"
                 app:cardElevation="1dp"
-                android:id="@+id/titleBudgetCard">
+                android:id="@+id/titleExpensesCard">
 
                 <TextView
-                    android:id="@+id/budgetCardTitle"
+                    android:id="@+id/expensesCardTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="" />
@@ -34,7 +34,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/titleBudgetCard"
+                android:layout_below="@+id/titleExpensesCard"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp">
 
@@ -70,7 +70,7 @@
                         android:text=""
                         android:textSize="25dp"
                         android:textColor="@color/colorAccent"
-                        android:id="@+id/monayToSpendFragment"/>
+                        android:id="@+id/moneyToSpendFragment"/>
 
                 </LinearLayout>
 
