--- a/app/src/main/res/layout/layout_account.xml
+++ b/app/src/main/res/layout/layout_account.xml
@@ -46,6 +46,7 @@
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:id="@+id/accountNameTxtBox"
                     android:textSize="15dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
@@ -67,7 +68,7 @@
                 <Spinner
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/sniperAccount"
+                    android:id="@+id/spinnerAccount"
                     android:layout_marginStart="20dp"
                     android:entries="@array/spinnerItemsAccountType">
                 </Spinner>
@@ -88,6 +89,7 @@
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:id="@+id/amountAccountTxtBox"
                     android:textSize="15dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
@@ -139,6 +141,27 @@
 
 
             </android.support.v7.widget.RecyclerView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="30dp"
+                android:id="@+id/accountCardViewEmpty"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No Accounts To Show"
+                        android:textSize="15dp"
+                        android:layout_marginTop="60dp"/>
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
 
         </RelativeLayout>
 
