--- a/app/src/main/res/layout/layout_account.xml
+++ b/app/src/main/res/layout/layout_account.xml
@@ -134,7 +134,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="30dp"
                 android:id="@+id/accountRecyclerView"
                 android:orientation="horizontal">
