--- a/app/src/main/res/layout/layoute_edit_accounts.xml
+++ b/app/src/main/res/layout/layoute_edit_accounts.xml
@@ -46,6 +46,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
+                    android:id="@+id/txtBoxAccoutnEditName"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a name" />
@@ -88,6 +89,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
+                    android:id="@+id/txtBoxAccountEditAmount"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a Amount"/>
