--- a/app/src/main/res/layout/layout_account.xml
+++ b/app/src/main/res/layout/layout_account.xml
@@ -89,6 +89,7 @@
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
                     android:id="@+id/amountAccountTxtBox"
                     android:textSize="15dp"
                     android:layout_marginStart="70dp"
