--- a/app/src/main/res/layout/layoute_edit_accounts.xml
+++ b/app/src/main/res/layout/layoute_edit_accounts.xml
@@ -67,7 +67,7 @@
                 <Spinner
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/sniperAccount"
+                    android:id="@+id/spinnerAccountEdit"
                     android:layout_marginStart="20dp"
                     android:entries="@array/spinnerItemsAccountType">
                 </Spinner>
@@ -89,6 +89,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
+                    android:inputType="numberDecimal"
                     android:id="@+id/txtBoxAccountEditAmount"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
@@ -113,7 +114,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/moneyLabel"
+            android:id="@+id/moneyLabelAccountEdit"
             android:text="$ 0"
             android:textSize="40dp"
             app:layout_constraintTop_toBottomOf="@id/availableLabel"
@@ -124,7 +125,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/moneyLabel"
+            app:layout_constraintTop_toBottomOf="@id/moneyLabelAccountEdit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -133,6 +134,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/removeButtonAccount"
                 android:text="@string/remove"
                 android:layout_marginStart="60dp"
                 />
@@ -140,6 +142,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/saveButtonAccount"
                 android:text="@string/save"
                 android:layout_marginStart="60dp"
                 />
