--- a/app/src/main/res/layout/budget_cardview_fragment.xml
+++ b/app/src/main/res/layout/budget_cardview_fragment.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:id="@+id/budgetCardView"
+        android:id="@+id/budgetCardViewFragment"
         android:layout_centerInParent="true">
 
         <RelativeLayout
