--- a/app/src/main/res/layout/layout_budget.xml
+++ b/app/src/main/res/layout/layout_budget.xml
@@ -40,12 +40,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="Goal:"
+                    android:text="Name:"
                     android:textSize="15dp" />
 
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:id="@+id/nameBudgetTxtBox"
                     android:textSize="15dp"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="15dp"
@@ -67,6 +68,8 @@
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:id="@+id/amountBudgetTxtBox"
                     android:textSize="15dp"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
@@ -84,18 +87,42 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:text="Goal         "
+                    android:textSize="15dp" />
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:id="@+id/goalBudgetTxtBox"
+                    android:textSize="15dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="15dp"
+                    android:hint="Enter a Amount" />
+
+            </LinearLayout>
+
+            <!-- <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:text="Account:"
                     android:textSize="15dp" />
                 <Spinner
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/sniperAccount"
+                    android:id="@+id/snipperBudget"
                     android:layout_marginStart="70dp"
                     android:entries="@array/spinnerItemsAccountType">
                 </Spinner>
 
 
-            </LinearLayout>
+            </LinearLayout> -->
 
         </LinearLayout>
 
@@ -122,7 +149,7 @@
             app:layout_constraintTop_toBottomOf="@+id/createButtonBudget"/>
 
         <!--Lists Of Budgets-->
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:id="@+id/budgettList"
@@ -133,6 +160,16 @@
             android:layout_marginBottom="20dp"
             android:orientation="horizontal"
             android:gravity="center_horizontal">
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:id="@+id/budgetCreateRecyclerView"
+                android:orientation="horizontal">
+
+
+            </android.support.v7.widget.RecyclerView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="200dp"
@@ -148,14 +185,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="No Acounts Created Yet"
+                        android:text="No Budgets to Show"
                         android:textSize="15dp"
                         android:layout_marginTop="60dp"/>
                 </RelativeLayout>
 
             </android.support.v7.widget.CardView>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.constraint.ConstraintLayout>
 
