--- a/app/src/main/res/layout/layout_edit_budget.xml
+++ b/app/src/main/res/layout/layout_edit_budget.xml
@@ -14,17 +14,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/moneySaved"
+            android:id="@+id/moneySavedBudgetEdit"
             android:text="$ 200"
             android:textSize="50dp"
-            app:layout_constraintBottom_toTopOf="@id/nameBudgetLabel"
+            app:layout_constraintBottom_toTopOf="@id/nameBudgetLabelEdit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="50dp"/>
 
         <TextView
-            android:id="@+id/nameBudgetLabel"
+            android:id="@+id/nameBudgetLabelEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
@@ -32,7 +32,7 @@
             android:textSize="25dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/moneySaved" />
+            app:layout_constraintTop_toTopOf="@+id/moneySavedBudgetEdit" />
 
         <LinearLayout
             android:id="@+id/infoBudget"
@@ -42,7 +42,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameBudgetLabel">
+            app:layout_constraintTop_toBottomOf="@+id/nameBudgetLabelEdit">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,6 +69,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
+                    android:id="@+id/nameBudgetEditTxtBox"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a name" />
@@ -90,6 +91,8 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
+                    android:inputType="numberDecimal"
+                    android:id="@+id/amountBudgetEditTxtBox"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a Amount"/>
@@ -97,6 +100,30 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="Goal          "
+                    android:textSize="15dp" />
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
+                    android:inputType="numberDecimal"
+                    android:id="@+id/goalBudgetEditTxtBox"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="15dp"
+                    android:hint="Enter a Amount"/>
+
+            </LinearLayout>
+
+           <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -117,7 +144,7 @@
                 </Spinner>
 
 
-            </LinearLayout>
+            </LinearLayout>-->
 
         </LinearLayout>
 
@@ -134,7 +161,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/removeButtonReceipt"
+                android:id="@+id/removeButtonBudget"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginStart="70dp"
@@ -144,7 +171,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/saveButtonReceipt"
+                android:id="@+id/saveButtonBudget"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginStart="50dp"
