--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
     <!--Total Amount of Money-->
     <TextView
-        android:id="@+id/totalAmount"
+        android:id="@+id/totalAmountMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="60dp"
@@ -37,7 +37,7 @@
         tools:autoSizeMaxTextSize="14dp" />
 
     <!--Incoming Money-->
-    <LinearLayout
+  <!--  <LinearLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/incomingInfo"
@@ -62,7 +62,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!--Budget Label-->
 
@@ -72,7 +72,7 @@
         android:id="@+id/budgetLabel"
         android:text="@string/budgetLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/incomingInfo"
+        app:layout_constraintTop_toBottomOf="@id/totalAmountMain"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="40dp"
         android:textSize="15dp"/>
@@ -183,6 +183,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/expensesTotalMain"
         android:text="@string/totalExpenses"
         android:textSize="30dp"
         android:textColor="@color/colorAccent"
