--- a/app/src/main/res/layout/layout_expenses.xml
+++ b/app/src/main/res/layout/layout_expenses.xml
@@ -47,6 +47,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
+                    android:id="@+id/expensesNameTxtBox"
                     android:layout_marginStart="75dp"
                     android:layout_marginTop="15dp"
                     android:hint="Enter a name" />
@@ -67,6 +68,8 @@
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:id="@+id/expensesAmountTxtBox"
+                    android:inputType="numberDecimal"
                     android:textSize="15dp"
                     android:layout_marginStart="60dp"
                     android:layout_marginTop="15dp"
@@ -92,12 +95,12 @@
                     android:textSize="15dp"
                     android:layout_marginStart="90dp"
                     android:layout_marginTop="15dp"
-                    android:hint="Enter a Date"
-                    android:inputType="date"/>
+                    android:id="@+id/dueDateExpensesTxtBox"
+                    android:hint="Enter a Date"/>
 
             </LinearLayout>
 
-            <LinearLayout
+           <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -141,7 +144,7 @@
                 </Spinner>
 
 
-            </LinearLayout>
+            </LinearLayout> -->
 
         </LinearLayout>
 
@@ -168,7 +171,7 @@
             app:layout_constraintTop_toBottomOf="@+id/createButtonExpense"/>
 
         <!--Lists Of Budgets-->
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:id="@+id/budgettList"
@@ -179,6 +182,16 @@
             android:layout_marginBottom="20dp"
             android:orientation="horizontal"
             android:gravity="center_horizontal">
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:id="@+id/expensesCreateRecyclerView"
+                android:orientation="horizontal">
+
+
+            </android.support.v7.widget.RecyclerView>
 
             <android.support.v7.widget.CardView
                 android:layout_width="200dp"
@@ -201,7 +214,7 @@
 
             </android.support.v7.widget.CardView>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.constraint.ConstraintLayout>
 
